--- a/jpconj/jpconjmain.ui
+++ b/jpconj/jpconjmain.ui
@@ -292,7 +292,7 @@
    <attribute name="dockWidgetArea">
     <number>4</number>
    </attribute>
-   <widget class="QWidget" name="search_content">
+   <widget class="QWidget" name="searchContent">
     <property name="minimumSize">
      <size>
       <width>0</width>
