--- a/jpconj/jpconjmain.ui
+++ b/jpconj/jpconjmain.ui
@@ -210,6 +210,16 @@
     <property name="title">
      <string>&amp;View</string>
     </property>
+    <widget class="QMenu" name="menuZoom">
+     <property name="title">
+      <string>Zoom</string>
+     </property>
+     <addaction name="actionZoomIn"/>
+     <addaction name="actionZoomOut"/>
+     <addaction name="actionNormalSize"/>
+    </widget>
+    <addaction name="menuZoom"/>
+    <addaction name="separator"/>
    </widget>
    <widget class="QMenu" name="menu_Edit">
     <property name="title">
@@ -239,10 +249,10 @@
     <string>ToolBar</string>
    </property>
    <property name="movable">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="allowedAreas">
-    <set>Qt::TopToolBarArea</set>
+    <set>Qt::AllToolBarAreas</set>
    </property>
    <property name="iconSize">
     <size>
@@ -275,7 +285,7 @@
    </property>
    <property name="minimumSize">
     <size>
-     <width>402</width>
+     <width>436</width>
      <height>72</height>
     </size>
    </property>
@@ -368,6 +378,32 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QToolBar" name="zoomTool">
+   <property name="baseSize">
+    <size>
+     <width>0</width>
+     <height>30</height>
+    </size>
+   </property>
+   <property name="windowTitle">
+    <string>Zoom Toolbar</string>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::AllToolBarAreas</set>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>30</width>
+     <height>30</height>
+    </size>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
   <action name="actionClose">
    <property name="icon">
     <iconset resource="icons.qrc">
@@ -431,6 +467,21 @@
    </property>
    <property name="text">
     <string>&amp;Print</string>
+   </property>
+  </action>
+  <action name="actionZoomIn">
+   <property name="text">
+    <string>Zoom In</string>
+   </property>
+  </action>
+  <action name="actionZoomOut">
+   <property name="text">
+    <string>Zoom Out</string>
+   </property>
+  </action>
+  <action name="actionNormalSize">
+   <property name="text">
+    <string>Normal Size</string>
    </property>
   </action>
  </widget>
